# cppbot

./: CMakeLists.txt
examples/: CMakeLists.txt  bot.hpp  forms.hpp  message_sending.cpp  queries.cpp  states_using.cpp
include/cppbot/: cppbot.hpp  handlers.hpp
src/: cppbot.cpp  handlers.cpp
